# easycringelib

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
src/: easycringelib.c  easycringelib.h
